Add login, logout, auth service and guard

--- a/src/app/musical-instrument-detail/musical-instrument-detail.component.html
+++ b/src/app/musical-instrument-detail/musical-instrument-detail.component.html
@@ -3,6 +3,6 @@
 <img [src]="instrument.imageUrl" [alt]="instrument.name + ' image'" height="300" />
 <p>Image URL: <a target="_blank" [href]="instrument.imageUrl">{{instrument.imageUrl}}</a></p>
 <div class="actions">
-  <button type="button" routerLink="/list">Go to list</button>
+  <button type="button" routerLink="/musical-instruments/list">Go to list</button>
   <button type="button" (click)="removeInstrument()">Remove</button>
 </div>
