--- a/src/app/musical-instruments-list/musical-instruments-list.component.html
+++ b/src/app/musical-instruments-list/musical-instruments-list.component.html
@@ -5,5 +5,5 @@
 <section class="musical-intrument-display" *ngFor="let instrument of (state | async).instruments">
   <h2>{{instrument.name}}</h2>
   <img [src]="instrument.imageUrl" alt="{{instrument.name}} image" height=100 />
-  <button type="button" routerLink="/detail/{{instrument.id}}">Details</button>
+  <button type="button" routerLink="/musical-instruments/detail/{{instrument.id}}">Details</button>
 </section>
