--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<section>
-  <a routerLink="/list">List</a> | <a routerLink="/new">Add</a>
-</section>
+<app-navigation></app-navigation>
 
 <section>
   <router-outlet></router-outlet>
